syntax = "proto3";

package ping.v1;

service PingService {
  rpc Ping (PingRequest) returns (PingResponse) {}
}

message PingRequest {
  string message = 1;
  string name = 2;
  string device_name = 3;
  int curr = 4;
}

message PingResponse {
  string message = 1;
}


// in c all proto folder and buf. files -tcp/ip
// update buf.gen to generate c client for grpc comminucatuion
// use that client to communicate to server to test connectivity